# atos-2026-hackathon

./: .gitignore  README.md  data.ipynb  dataLayer1.ipynb  flowGMMData  keynotes.md  layer1Data.ipynb  layer2.ipynb  layer2personaengine.ipynb  main.py  pyproject.toml  requirements.txt  results-verify.md  workforce_1000.csv
DTW/: .gitignore  README.md  frontend.jsx
DTW/backend/: app.py
DTW/layer1/: __init.py  generate_workforce.py
DTW/layer2/: __init__.py  build_simulation_inputs.py  validate_clusters.py
DTW/layer3/: model.py  run.py
DTW/layer4/: npv_analysis.py  run.py  scenario_comparison.py
frontend/src/: App.jsx
layer1/: layer1Data.ipynb
layer2/: collab_graph.pkl  covariance_by_persona.pkl  layer2.ipynb  workforce_v2_1000.csv
layer3/: __init__.py  agent.py  checkpoint.py  model.py  run.py  validation.py  verify.py
layer3/outputs/: output_scenario_a.csv  output_scenario_b.csv  output_scenario_c.csv  sample_output.txt
layer4/: __init__.py  bass_diffusion.py  config.py  hotspot_analysis.py  implement.ipynb  npv_analysis.py  package_output.py  run.py  scenario_comparison.py  sensitivity_analysis.py
layer4/outputs/: bass_diffusion.json  comparison_table.json  hotspot_analysis.json  layer4_output.json  npv_analysis.json  sensitivity_analysis.json
